@@ -1,6 +1,14 @@
 2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_shadow), (clearlooks_draw_gripdots),
+	(clearlooks_draw_slider), (clearlooks_draw_slider_button),
+	(clearlooks_draw_handle):
+	More 0.5 offset cleanups (and radius fixes).
+
+2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_top_left_highlight), (clearlooks_draw_button),
 	(clearlooks_draw_scrollbar_stepper):
 	Button and clearlooks_draw_top_left_highlight cleanup and small fixes.
